<resources>
    <string name="app_name">IZTradingV1</string>
    <string name="show_password">show password</string>
    <string name="password">Mật khẩu</string>
    <string name="signin">Đăng nhập</string>
    <string name="signup">Chưa có tài khoản</string>
    <string name="intro_logo">intro logo</string>
    <string name="name">Họ tên</string>
    <string name="phone">Điện thoại</string>
    <string name="email">Email</string>
    <string name="signals">Signals</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_password">hide password</string>
    <string name="register">Đăng ký</string>
    <string name="total_signals">Total</string>
    <string name="total_signals_ex">0</string>
    <string name="wins">Wins</string>
    <string name="total_wins_ex">0</string>
    <string name="total_wins_rate_ex">(0%)</string>
    <string name="change_user_info">Thay đổi thông tin</string>
    <string name="signout">Đăng xuất</string>
    <string name="tv_phone_ex">0345441338</string>
    <string name="tv_phone">Điện thoại:</string>
    <string name="tv_mail">Email:</string>
    <string name="tv_mail_ex">mail@gmail.com</string>
    <string name="tv_name">Họ tên:</string>
    <string name="tv_name_ex">Huy</string>
    <string name="save_user_info">Lưu</string>
    <string name="change_user_pass">Đổi mật khẩu</string>
    <string name="enter_old_pass">Nhập mật khẩu cũ:</string>
    <string name="reenter_new_pass">Nhập lại mật khẩu:</string>
    <string name="enter_new_pass">Nhập mật khẩu mới:</string>
    <string name="cancel">Hủy</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="enter_email">Nhập email:</string>
    <string name="send_request_reset_pass">Xác nhận</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="search">Tìm kiếm</string>
</resources>