<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/cardviewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView">

        <EditText
            android:id="@+id/etxtAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input_effect"
            android:ems="10"
            android:hint="@string/account"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewAccount">
        <EditText
            android:id="@+id/etxtPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_input_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:autofillHints=""
            android:importantForAutofill="no"/>
        <ImageButton
            android:id="@+id/ibtnShowPassword"
            android:layout_gravity="end"
            android:background="@color/dark_input_button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/show_password"
            app:srcCompat="@mipmap/ic_show_password_foreground"/>
        <ImageButton
            android:id="@+id/ibtnHidePassword"
            android:layout_gravity="end"
            android:background="@color/dark_input_button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/hide_password"
            app:srcCompat="@mipmap/ic_hide_password_foreground"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignIn"
        android:textColor="@color/white"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/signin"
        android:backgroundTint="@color/dark_input_button_background"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewPassword"/>

    <Button
        android:id="@+id/btnSignUp"
        android:textColor="@color/white"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/signup"
        android:backgroundTint="@color/dark_input_button_background"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>