<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@color/dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/cardviewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/etxtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input_effect"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewName">

        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/etxtPhone"
            android:background="@drawable/custom_input_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:ems="10"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:importantForAutofill="no"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewPhone">

        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/etxtAccount"
            android:background="@drawable/custom_input_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/account"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:importantForAutofill="no"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewAccount">

        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/etxtPassword"
            android:background="@drawable/custom_input_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:importantForAutofill="no"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewPassword">

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input_effect"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_input_button_background"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewEmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>

