<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_signal_container"
    tools:context=".Activity.ChangePasswordActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_background"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_pass"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:gravity="start"/>
            <EditText
                android:id="@+id/etxt_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:inputType="textPassword"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_background"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reenter_new_pass"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:gravity="start"/>
            <EditText
                android:id="@+id/etxt_new_pass_reenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:inputType="textPassword"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_update_pass"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/dark_background"
            android:text="@string/change_user_pass"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />
    </LinearLayout>

</LinearLayout>